--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ cffi==1.17.1
 cfgv==3.4.0
 charset-normalizer==3.4.2
 click==8.1.8
+colorama==0.4.6
 cryptography==45.0.2
 deprecation==2.1.0
 distlib==0.3.9
@@ -45,7 +46,7 @@ MarkupSafe==3.0.2
 mdurl==0.1.2
 more-itertools==10.7.0
 nodeenv==1.9.1
-numpy==2.0.2
+numpy==2.3.3
 openai==1.79.0
 packaging==25.0
 pathspec==0.12.1
@@ -63,12 +64,15 @@ pydantic_core==2.33.2
 Pygments==2.19.1
 python-dotenv==1.1.0
 python-multipart==0.0.20
+pywin32==311
+pywin32-ctypes==0.2.3
 PyYAML==6.0.2
 qdrant-client==1.14.3
 regex==2024.11.6
 requests==2.32.3
 rich==14.0.0
 rich-toolkit==0.14.7
+setuptools==80.9.0
 shellingham==1.5.4
 sniffio==1.3.1
 soupsieve==2.7
@@ -84,9 +88,8 @@ typing-inspection==0.4.0
 typing_extensions==4.13.2
 urllib3==2.4.0
 userpath==1.9.2
-uv==0.7.5
+uv==0.8.17
 uvicorn==0.34.3
-uvloop==0.21.0
 validators==0.34.0
 virtualenv==20.31.2
 watchfiles==1.0.5
